# mobile-tests-13-py

./: .gitignore  LICENSE  README.md  config.local.env  config.personal.env.browserstack.example  config.personal.env.example  config.personal.env.local.example  config.py  config.test.env.browserstack.example  conftest.py  pyproject.toml
mobile_tests_lesson_13/assist/: file.py
mobile_tests_lesson_13/assist/selene/: patch_element_mobile_commands.py  patch_selector_strategy.py
mobile_tests_lesson_13/model/: app.py
mobile_tests_lesson_13/utils/: __init__.py
mobile_tests_lesson_13/utils/allure/: __init__.py  attach.py
mobile_tests_lesson_13/utils/browserstack/: get.py
mobile_tests_lesson_13/utils/python/: __init__.py
mobile_tests_lesson_13/utils/selene/: patch_element_mobile_commands.py  patch_selector_strategy.py
tests/: conftest.py
tests/android/: test_wikipedia.py
tests/android/patched_style/: test_wikipedia.py
typings/selene/core/: entity.pyi
